# panda3d-complexpbr

./: LICENSE  README.md  pyproject.toml  setup.py
complexpbr/: __init__.py  brdf_lut_calculator.py  ibl_f.frag  ibl_v.vert  min_f.frag  min_v.vert  pbr_f.frag  pbr_f_shadows.frag  pbr_shader_f_invert.frag  pbr_shader_v_invert.vert  pbr_v.vert  pbr_v_arm.vert
complexpbr/ibl_experimental/: brdf_lut_calculator.py  ibl_f.frag  ibl_v.vert
complexpbr/ibl_experimental/ssao_ssr_ibl/: ibl_f.frag  ibl_v.vert  min_f.frag  min_v.vert
