[build-system]
requires = [
    "setuptools >= 61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
version = "0.6.4"
name = "panda3d-complexpbr"
authors = [
    {name = "Logan Bier"}
]
description = "IBL rendering module supporting real-time reflections and post-processing effects in Panda3D"
readme = "README.md"
keywords = ["panda3d", "gamedev", "PBR", "IBL", "real-time", "simulation"]
license = "BSD-3-Clause"
license-files = ["LICENSE",]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "panda3d >= 1.10.8",
    "typing_extensions ~= 4.7",
]
requires-python = ">= 3.10"

[project.urls]
homepage = "https://github.com/rayanalysis/panda3d-complexpbr"

[tool.setuptools]
packages = ["complexpbr"]
